--- a/src/component/banner.css
+++ b/src/component/banner.css
@@ -2,8 +2,8 @@
     display: block;
     width: 100%;
     height: 46px;
-    color: white;
-    background-color: #0E1117;
+    color: #E6E5E8;
+    background-color: #20232A;
     padding: 5px 6px;
     z-index: 1;
     position: fixed;
@@ -20,15 +20,15 @@
     border: none;
     border-radius: 0.25rem;
     font-size: 14px;
-    color: #FFFFFF;
+    color: #E6E5E8;
     font-size: 20px;
 }
 .banner button:hover {
-    background-color: #3A3B46;
+    background-color: #03C9D7;
     cursor: pointer;
 }
 .banner button:active {
-    outline: 3.5px solid #93393E;
+    outline: 3.5px solid #FFFFFF;
 }
 @keyframes open {
     0% {left: -336px;}
