--- a/src/component/element.css
+++ b/src/component/element.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 .title {
     display: block;
-    color: white;
+    color: #e6e5e8;
     padding: 20px 0 16px;
     overflow: hidden;
 }
@@ -10,13 +10,13 @@
 }
 .subtitle {
     display: block;
-    color: white;
+    color: #e6e5e8;
     padding: 16px 0px;
     overflow: hidden;
 }
 .Pbox {
     display: flex;
-    width: 704px;
+    width: 802px;
     height: 92.8px;
     margin-bottom: 16px;
 }
@@ -28,20 +28,20 @@
     display: inline-block;
     height: 24px;
     font-size: 14px;
-    color: #FFFFFF;
+    color: #e6e5e8;
 }
 .middle {
     display: inline-block;
     height: 48.8px;
     font-size: 36px;
-    color: #FFFFFF;
+    color: #e6e5e8;
     padding: 0 0 4px;
 }
 .bottom {
     display: inline-block;
     height: 20px;
     font-size: 16px;
-    color: #FFFFFF;
+    color: #e6e5e8;
 }
 .icon {
     margin: 0 2px 0 0;
@@ -50,18 +50,18 @@
 .Tbox {
     display: block;
     overflow: hidden;
-    width: 704px;
+    width: 802px;
     height: 215.2px;
-    color: #FFFFFF;
+    color: #e6e5e8;
     font-size: 14px;
     font-family: 'Source Code Pro', monospace;
     margin-bottom: 16px;
 }
 .tbox {
     display: inline-block;
-    width: 698px;
+    width: 802px;
     height: 28.4px;
-    border-left: 1px solid #3A3B46;
+    border-left: 1px solid #e6e5e899;
     padding: 3px 5px 3px 20px;
     margin-left: 6px;
 }
@@ -74,7 +74,7 @@
     width: 704px;
     height: 22.4px;
     font-family: 'Source Code Pro', monospace;
-    color: #FFFFFF;
+    color: #e6e5e8;
     font-size: 14px;
     margin-bottom: 16px;
 }
@@ -87,27 +87,27 @@
     width: 14px;
     height: 14px;
     padding: 0 4px 0 0;
-    color: #66D9EF;
+    color: #03C9D7;
 }
 .close_right {
     display: inline-block;
     width: 14px;
     height: 14px;
     padding: 0 4px 0 0;
-    color: #AE81FF;
+    color: #00C292;
 }
 .content {
     display: block;
-    width: 704px;
+    width: 804px;
     height: 25.6px;
     overflow: hidden;
     font-size: 16px;
-    color: #FFFFFF;
+    color: #e6e5e8;
     margin: 0 0px 16px;
 }
 .nav_contain {
     display: block;
-    width: 704px;
+    width: 850px;
     overflow: hidden;
     padding : 16px 0 0;
 }
