--- a/src/component/header.css
+++ b/src/component/header.css
@@ -2,7 +2,7 @@
     display: block;
     width: 100%;
     height: 2px;
-    background: linear-gradient(to right, #F44848, #F2F179);
+    background: linear-gradient(to right, #03C9D7, #FEC90F, #FB9678);
     position: fixed;
     top: 0;
     left: 0;
