--- a/src/component/nav.css
+++ b/src/component/nav.css
@@ -1,9 +1,9 @@
 .nav {
     position: relative;
     display: block;
-    background-color: #0E1117;
+    background-color: none;
     height: 42px;
-    max-width: 704px;
+    max-width: 850px;
     margin: 0 0 -2px;
     padding: 0 0 2px;
     overflow: hidden;
@@ -16,21 +16,20 @@
     height: 40px;
     width: fit-content;
     color: white;
-    background-color: #0E1117;
+    background-color: none;
     font-size: 14px;
     margin: 5.5px 14px 5.5px 0px;
     padding-top: 5px;
 }
 .nav span:hover {
     cursor: pointer;
-    color: #E63B37;
 }
 .marker {
     position: relative;
     display: block;
     height: 2.5px;
     width: 0px;
-    background-color: #FF5352;
+    background-color: #03C9D7;
     z-index: 50;
     top: 42px;
     left: 0;
